tests/fixtures/errors/rename_internal_hidden.full
error[E0101]: 'x' is not public on type 'point'
 --> rename_internal_hidden.z:9:10
   9 |     d: p.x
     |          ^
1 error found
